@@ -607,8 +607,8 @@ Ri5cyImpl::stepInstr (duration <double>  timeout,
 
   mCpu->fetch_enable_i = 1;
 
-  writeDebugReg (DBG_CTRL, DBG_CTRL_SSTE);		// SSTE
   writeDebugReg (DBG_NPC, readDebugReg (DBG_NPC));	// Flush pipeline
+  writeDebugReg (DBG_CTRL, DBG_CTRL_SSTE);		// SSTE
   writeDebugReg (DBG_HIT, 0);				// Release
   waitForHalt ();
 
@@ -637,10 +637,11 @@ Ri5cyImpl::runToBreak (duration <double>  timeout,
 
   mCpu->fetch_enable_i = 1;
 
-  writeDebugReg (DBG_CTRL, readDebugReg (DBG_CTRL) & ~DBG_CTRL_SSTE);
-  writeDebugReg (DBG_HIT, 0);
+  uint32_t newDbgCtrl;
+
+  newDbgCtrl = readDebugReg (DBG_CTRL) & ~(DBG_CTRL_SSTE | DBG_CTRL_HALT);
   writeDebugReg (DBG_NPC, readDebugReg (DBG_NPC));	// Flush pipeline
-  writeDebugReg (DBG_CTRL, readDebugReg (DBG_CTRL) & ~DBG_CTRL_HALT);
+  writeDebugReg (DBG_CTRL, newDbgCtrl);
 
   // @todo this is a type of waitForHalt
 
@@ -651,10 +652,7 @@ Ri5cyImpl::runToBreak (duration <double>  timeout,
 	return ITarget::ResumeRes::TIMEOUT;
       }
     else
-      {
-	cout << "Got here" << endl;
-	clockModel ();
-      }
+      clockModel ();
 
   return ITarget::ResumeRes::INTERRUPTED;
 
